Resolves: tdf#106080 fix explicitly setting automatic in search by format

this is still somewhat broken in that what you see is not what you get
if you don't explicitly set automatic, but clears the regression part
of things in that the old broken behavior is restored instead of the
new broken behavior

Change-Id: I8f53a276ee60f5c9f2f28d3b92a13990cc20314a
(cherry picked from commit d7f1a1689d70b2d66d0f727b6a898ef1a971da9d)